Revision history for LWP-Protocol-AnyEvent-http

1.10.0  ~~~~-~~-~~
        - ~~~

1.8.0   2013-08-05
        - Imitate LWP::Protocol::http's removal of newlines from request headers.
        - Handle user:pass in request urls and proxy urls.

1.0.7   2012-11-10
        - Implement LWP::Protocol::https's ssl peer verification.

1.0.6   2012-11-04
        - Imitate Net::HTTP's removal of newlines from response headers.

1.0.5   2012-04.25
        - Some test files were missing from MANIFEST.

1.0.4   2012-03-09
        - Preserve AnyEvent::HTTP pseudo heads by prefixing with X-AE-
        - Fix duplicate headers in response
        - Add proxy support
        - Prevent AnyEvent::HTTP adding Referer header with the request URL
        - Fix bug causing cannot use undefined value as SCALAR reference

1.0.3   2011-06-17
        - Skip tests that will fail due to DNS hijacking.

1.0.2   2011-06-13
        Initial version
        - LWP-Protocol-Coro-http-v1.0.1 minus the dependency on Coro.
        - Tests added.
        - Fixed bugs in :content_cb features.
        - Fixed bugs in error handling.