@@ -1,6 +1,8 @@
 Revision history for LWP-Protocol-AnyEvent-http
 
 1.10.0  ~~~~-~~-~~
+        - Added support for SSL_cert_file, SSL_cert, SSL_key_file and SSL_key.
+        - Document supported ssl_opts.
         - ~~~
 
 1.8.0   2013-08-05
